# shopClever

./: Cargo.toml
src/: main.rs  routes.rs
src/modules/user/: mod.rs  responses.rs  structs.rs
